--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "@discordx/pagination": "^2.2.0",
+    "@project-serum/anchor": "^0.24.2",
+    "@solana/web3.js": "^1.43.1",
     "axios": "^0.27.2",
     "discord.js": "^13.7.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "wokcommands": "^1.5.3"
   }
 }
