--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "prettier": "prettier --config .prettierrc --write \"**/*.{js,ts}\"",
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,10 +16,12 @@
     "ui": "*"
   },
   "devDependencies": {
+    "@sl/config": "*",
     "eslint": "7.32.0",
-    "eslint-config-custom": "*",
+    "eslint-config-sl": "*",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-config-next": "^12.0.8",
     "next-transpile-modules": "9.0.0",
-    "tsconfig": "*",
     "@types/node": "^17.0.12",
     "@types/react": "17.0.37",
     "typescript": "^4.5.3"
