--- a/apps/discord/package.json
+++ b/apps/discord/package.json
@@ -14,9 +14,13 @@
     "lint": "eslint --cache \"**/*.{js,ts}\""
   },
   "dependencies": {
+    "@discordx/pagination": "^2.2.0",
+    "@project-serum/anchor": "^0.24.2",
+    "@solana/web3.js": "^1.43.1",
     "axios": "^0.27.2",
     "discord.js": "^13.7.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "wokcommands": "^1.5.3"
   },
   "devDependencies": {
     "@sl/config": "*",
