--- a/apps/discord/tsconfig.json
+++ b/apps/discord/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "@sl/config/tsconfig.base.json",
-  "include": ["src", "README.md"],
+  "include": [
+    "src",
+    "README.md",
+    "../../node_modules/@types/lodash/index.d.ts"
+  ]
 }
