--- a/apps/discord/package.json
+++ b/apps/discord/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@discordx/pagination": "^2.2.0",
+    "@metaplex/js": "^4.12.0",
     "@project-serum/anchor": "^0.24.2",
     "@solana/web3.js": "^1.43.1",
     "axios": "^0.27.2",
