--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,7 +20,9 @@
     "express": "^4.18.1",
     "helmet": "^5.1.0",
     "http-errors": "^2.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.7.3",
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
     "@sl/config": "*",
