--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# build
+dist
+
 # dependencies
 node_modules
 .pnp
@@ -16,6 +19,7 @@ build
 # misc
 .DS_Store
 *.pem
+.idea
 
 # debug
 npm-debug.log*
