--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -7,6 +7,7 @@
   ],
   "compilerOptions": {
     "experimentalDecorators": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "strictPropertyInitialization": false // https://www.kindacode.com/snippet/typeorm-property-id-has-no-initializer-and-is-not-definitely-assigned-in-the-constructor/
   }
 }
