--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -6,6 +6,7 @@
     "../../node_modules/@types/lodash/index.d.ts"
   ],
   "compilerOptions": {
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "outDir": "./dist",
     "strictPropertyInitialization": false // https://www.kindacode.com/snippet/typeorm-property-id-has-no-initializer-and-is-not-definitely-assigned-in-the-constructor/
