--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,6 +22,7 @@
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
